--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -14,7 +14,7 @@
     "loading": "Cargando manifiesto...",
     "error": "Error cargando el manifiesto",
     "title": "Manifiesto para la música libre y colectiva",
-    "content": "En un contexto donde la música está cada vez más subordinada a los intereses económicos, queremos propugnar un modelo alternativo que posea la dignidad y el compromiso con la profesión musical.",
+    "contentFile": "manifest",
     "principles": [
       {
         "title": "Libertad",
