--- a/src/i18n/locales/ca.json
+++ b/src/i18n/locales/ca.json
@@ -143,6 +143,6 @@
     "required_fields": "Si us plau, completa tots els camps requerits"
   },
   "footer": {
-    "copyright": "© 2025 La instrumental. Tots els drets reservats."
+    "text": "2025 La instrumental."
   }
 }
