--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -143,6 +143,6 @@
     "required_fields": "Por favor, completa todos los campos requeridos"
   },
   "footer": {
-    "copyright": "© 2025 La instrumental. Todos los derechos reservados."
+    "text": "2025 La instrumental."
   }
 }
