--- a/src/i18n/locales/ca.json
+++ b/src/i18n/locales/ca.json
@@ -8,7 +8,13 @@
   },
   "hero": {
     "title": "La instrumental",
-    "subtitle": "Per imaginar futurs més lliures i col·lectius per la música; per defensar la dignitat i el compromís de les nostres professions."
+    "subtitle": "Per imaginar futurs més lliures i col·lectius per la música. Per una producció i consum musical",
+    "rotatingWords": [
+      "responsables",
+      "crítics",
+      "conscients",
+      "sostenibles"
+    ]
   },
   "manifest": {
     "section_title": "Manifest",
