--- a/src/i18n/locales/ca.json
+++ b/src/i18n/locales/ca.json
@@ -133,7 +133,6 @@
   },
   "adhesion": {
     "section_title": "Adhesió al manifest",
-    "form_title": "Formulari d'adhesió",
     "name": "Nom",
     "first_name": "Nom",
     "last_name": "Cognoms",
@@ -141,12 +140,15 @@
     "phone": "Telèfon",
     "organization": "Organització",
     "message": "Missatge",
+    "comment": "Comentaris",
+    "comment_placeholder": "Ens pots comentar el que vulguis...",
     "accept_terms": "Accepto els términs i condicions",
     "submit": "Enviar",
     "submitting": "Enviant...",
     "success": "Gràcies per la teva adhesió!",
     "error": "Error enviant el formulari",
-    "required_fields": "Si us plau, completa tots els camps requerits"
+    "required_fields": "Si us plau, completa tots els camps requerits",
+    "receive_info": "Vull rebre informació sobre La Instrumental"
   },
   "footer": {
     "text": "2025 La instrumental."
