--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -130,7 +130,7 @@
     "success": "¡Gracias por tu adhesión!",
     "error": "Error enviando el formulario",
     "required_fields": "Por favor, completa todos los campos requeridos",
-    "receive_info": "Quiero recibir información sobre La Instrumental?"
+    "receive_info": "Quiero recibir información sobre La Instrumental"
   },
   "footer": {
     "text": "2025 La instrumental."
