manifiesto dj tiesto

--- a/src/i18n/locales/ca.json
+++ b/src/i18n/locales/ca.json
@@ -20,7 +20,7 @@
     "text": "La Instrumental és un procés obert d'organització i debat al voltant de la música, impulsat per artistes, oients i hackers, amb l'objectiu de crear i compartir eines i recursos per l'autogestió de les nostres comunitats."
   },
   "manifest": {
-    "section_title": "Manifest v0",
+    "section_title": "MANIFEST v.0",
     "loading": "Carregant manifest...",
     "error": "Error carregant el manifest",
     "title": "Manifest per a la música lliure i col·lectiva",
