--- a/src/i18n/locales/ca.json
+++ b/src/i18n/locales/ca.json
@@ -8,7 +8,7 @@
   },
   "hero": {
     "title": "La instrumental",
-    "subtitle": "Per imaginar futurs més lliures i col·lectius per la música. Per una producció i consum musical",
+    "subtitle": "Per imaginar futurs més lliures i col·lectius per a la música. Per una producció i consum musical",
     "rotatingWords": [
       "responsables",
       "crítics",
